src/objects/Account/fields/Account_Origin__c.field-meta.xml
<CustomField>
    <fullName>Account_Origin__c</fullName>
    <label>Account Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin</valueSetName>
    </valueSet>
</CustomField>