src/objects/Account/fields/DataTransferTest__c.field-meta.xml
<CustomField>
    <fullName>DataTransferTest__c</fullName>
    <label>DataTransferTest</label>
    <length>24</length>
    <type>Text</type>
</CustomField>