src/objects/Account/fields/testSwapnali__c.field-meta.xml
<CustomField>
    <fullName>testSwapnali__c</fullName>
    <description>testSwapnali</description>
    <label>testSwapnali</label>
    <length>20</length>
    <type>Text</type>
</CustomField>